--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@tanstack/react-query": "^5.90.18",
+    "axios": "^1.13.2",
     "formik": "^2.4.9",
     "modern-normalize": "^3.0.1",
     "next": "16.1.3",
