--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-datepicker": "^9.1.0",
     "react-dom": "19.2.3",
     "react-hot-toast": "^2.6.0",
+    "react-icons": "^5.5.0",
     "react-loader-spinner": "^8.0.2",
     "react-select": "^5.10.2",
     "recharts": "^3.6.0",
